Added channel list page

--- a/RiderGen/templates/index.html
+++ b/RiderGen/templates/index.html
@@ -2,6 +2,8 @@
 
 {% block title %} Home {% endblock %}
 
+{% block nav_home %}active{% endblock %}
+
 {% block heading %} Welcome to RiderGen! {% endblock %}
 {% block subheading %} It'll be great {% endblock %}
 
