--- a/RiderGen/templates/contact.html
+++ b/RiderGen/templates/contact.html
@@ -5,10 +5,8 @@
 {% block nav_contact %}active{% endblock %}
 
 {% block heading %} Contact {% endblock %}
-{% block subtitle %} Where to find me {% endblock %}
+{% block subheading %} Where to find me {% endblock %}
 
-{% block content %}
-<p>
-    Get in touch at genny@ridergen.com
-</p>
+{% block intro %}
+<p>Get in touch at genny@ridergen.com</p>
 {% endblock %}
