--- a/RiderGen/templates/index.html
+++ b/RiderGen/templates/index.html
@@ -7,8 +7,14 @@
 {% block heading %} Welcome to RiderGen! {% endblock %}
 {% block subheading %} It'll be great {% endblock %}
 
-{% block content %}
+{% block intro %}
 
-<p>Use this area to provide additional information.</p>
+<p>
+    Keeping your rider accurate and up to date is an extremely important life skill. Sometimes though, you're really short on time or you
+    don't know where to start. Maybe you don't really know what kind of mics work best on what instruments? Don't panic, we've got you covered.
+    Just tell us what your act consists of and we'll generate a rider and channel list for you. It's fully customisable, so you can add and
+    delete channels, change mics or add notes. Then save it as a pdf (not a word doc! You don't want people to accidentally change it without
+    you knowing!) and send it to the promoter in a timely manner. A timely. Manner.
+</p>
 
 {% endblock %}
