--- a/RiderGen/static/content/styles.css
+++ b/RiderGen/static/content/styles.css
@@ -1,5 +1,5 @@
 ﻿/* Heavily influenced by FreeCodeCamp's Bootstrap tutorial
-https://www.freecodecamp.org/news/learn-bootstrap-4-in-30-minute-by-building-a-landing-page-website-guide-for-beginners-f64e03833f33/*/
+https://www.freecodecamp.org/news/learn-bootstrap-4-in-30-minute-by-building-a-landing-page-website-guide-for-beginners-f64e03833f33/ */
 
 body {
     background: lightblue;
@@ -14,7 +14,7 @@ body {
     position: relative;
     width: 100%;
     height: auto;
-    background-image: url('images/banner.png');
+    background-image: url('images/handwrittenplot.jpg');
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
@@ -36,6 +36,10 @@ body {
     overflow: auto;
 }
 
+.nav-item {
+    padding-left: 1em;
+}
+
 h1 {
     font-size: 3em;
     margin-bottom: 20px;
@@ -44,6 +48,12 @@ h1 {
 h2 {
     font-size: 1.7em;
     margin: 10px;
+}
+
+h3 {
+    font-size: 1.4em;
+    color: darkslategrey;
+    text-align: center;
 }
 
 p {
@@ -62,24 +72,13 @@ ul {
     margin-left: 20px;
 }
 
-#poll {
-    position: relative;
-    margin: 0 auto;
-    width: 75%;
-    height: auto;
-    overflow: auto;
-    border-radius: 20px;
-    font-size: 1.55em;
-    text-align: center;
-    background: seashell;
-    padding: 20px;
-    align-items: center;
-}
-
-#qst {
-    position: relative;
-    top: 20%;
-    padding: 20px;
+#formbar {
+    background-color: lightgoldenrodyellow;
+    border-style: solid;
+    border-width: 5px;
+    border-radius: 5px;
+    border-color: gold;
+    padding: 10px;
 }
 
 #buttons {
@@ -97,7 +96,7 @@ ul {
     text-decoration: none;
     outline: none;
     color: #fff;
-    background-color: red;
+    background-color: peru;
     border: none;
     border-radius: 15px;
     box-shadow: 0 9px #999;
@@ -105,60 +104,62 @@ ul {
 }
 
     .button:hover {
-        background-color: darkred
+        background-color: sienna;
     }
 
     .button:active {
-        background-color: darkred;
+        background-color: sienna;
         box-shadow: 0 5px #666;
         transform: translateY(4px);
     }
 
 .button2 {
-    background-color: #008CBA;
+    background-color: red;
 }
-/* Blue */
+
 .button3 {
-    background-color: purple;
+    background-color: orange;
 }
-/* Purple */
+
 .button4 {
     background-color: yellow;
     color: black;
 }
-/* Yellow */
+
+.button5 {
+    background-color: forestgreen;
+}
 
 .button2:hover {
-    background-color: darkblue;
+    background-color: darkred;
 }
-/* Blue */
+
 .button3:hover {
-    background-color: rebeccapurple;
+    background-color: darkgoldenrod;
 }
-/* Purple */
+
 .button4:hover {
-    background-color: gold
+    background-color: gold;
 }
-/* Yellow */
+
+.button5:hover {
+    background-color: darkgreen;
+}
 
 .button2.active {
-    background-color: darkblue;
+    background-color: darkred;
 }
-/* Blue */
-.button3.active {
-    background-color: rebeccapurple;
-}
-/* Purple */
-.button4.active {
-    background-color: gold
-}
-/* Yellow */
 
-#ans {
-    position: relative;
-    top: 20%;
-    padding: 20px;
-    font-size: 0.85em;
+.button3.active {
+    background-color: darkgoldenrod;
+}
+
+.button4.active {
+    background-color: gold;
+}
+
+.button5.active {
+    background-color: darkgreen;
 }
 
 img {
@@ -170,4 +171,15 @@ img {
     font-size: 1em;
     padding: 10px;
     font-style: italic;
+}
+
+table {
+    margin: 10px;
+    border: 3px solid black;
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 2px solid black;
+    padding: 3px;
 }
