--- a/RiderGen/templates/layout.html
+++ b/RiderGen/templates/layout.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!-- My style sheet-->
     <link href="/static/content/styles.css" rel="stylesheet">
+
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
@@ -22,7 +24,7 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link {% block nav_home %}{% endblock %}" href="/home">Home</a></li>
                 <li class="nav-item"><a class="nav-link {% block nav_about %}{% endblock %}" href="/about">About</a></li>
-                <li class="nav-item"><a class="nav-link {% block nav_channels %}{% endblock %}" href="/channels">Make a channel list</a></li>
+                <li class="nav-item"><a class="nav-link {% block nav_channels %}{% endblock %}" href="/channels">Channel list</a></li>
                 <li class="nav-item"><a class="nav-link {% block nav_contact %}{% endblock %}" href="/contact">Contact</a></li>
             </ul>
         </div>
@@ -43,11 +45,15 @@
         </div>
     </header>
     {% endif %}
-    <div class="container-lg">
+    <div class="container">
+        {% block intro %}{% endblock %}
+    </div>
+    <div class="container-fluid">
         {% block content %}{% endblock %}
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="../static/scripts/JavaScript.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
