--- a/RiderGen/static/content/styles.css
+++ b/RiderGen/static/content/styles.css
@@ -64,6 +64,14 @@ ul {
   margin-left: 20px;
 }
 
+input[type=checkbox] {
+  display: none;
+}
+
+input[type=checkbox]:checked + label {
+  opacity: 1;
+}
+
 #formbar {
   background-color: lightgoldenrodyellow;
   border-style: solid;
@@ -73,69 +81,133 @@ ul {
   padding: 10px;
 }
 
-.button7, .button6, .button5, .button4, .button3, .button2, .button1, .options {
+.drum_options, .button7, .button6, .button5, .button4, .button3, .button2, .button1, .options {
   display: inline-block;
   padding: 15px 25px;
   cursor: pointer;
   text-align: center;
   text-decoration: none;
   outline: none;
-  opacity: 0.4;
-  transition: 0.3s;
+  opacity: 0.5;
+  transition: 0.1s;
   border: none;
   border-radius: 15px;
-  box-shadow: 0 9px #999;
   margin: 10px;
 }
-.button7:active, .button6:active, .button5:active, .button4:active, .button3:active, .button2:active, .button1:active, .options:active, .selected.button7, .selected.button6, .selected.button5, .selected.button4, .selected.button3, .selected.button2, .selected.button1, .selected.options {
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
-  opacity: 1;
-}
-.button7:hover, .button6:hover, .button5:hover, .button4:hover, .button3:hover, .button2:hover, .button1:hover, .options:hover, .button7:focus, .button6:focus, .button5:focus, .button4:focus, .button3:focus, .button2:focus, .button1:focus, .options:focus {
+.drum_options:active, .button7:active, .button6:active, .button5:active, .button4:active, .button3:active, .button2:active, .button1:active, .options:active, .selected.drum_options, .selected.button7, .selected.button6, .selected.button5, .selected.button4, .selected.button3, .selected.button2, .selected.button1, .selected.options {
   opacity: 1;
 }
 
 .options {
-  padding: 5px 15px;
+  box-shadow: 0 9px #999;
   color: white;
   background-color: mediumturquoise;
+  padding: 8px 16px;
+}
+.options:hover {
   opacity: 1;
+}
+.options:active, .options.selected {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
 
 .button1 {
+  box-shadow: 0 9px #999;
   color: white;
   background-color: sienna;
 }
+.button1:hover {
+  opacity: 1;
+}
+.button1:active, .button1.selected {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
 
 .button2 {
+  box-shadow: 0 9px #999;
   color: white;
   background-color: red;
 }
+.button2:hover {
+  opacity: 1;
+}
+.button2:active, .button2.selected {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
 
 .button3 {
+  box-shadow: 0 9px #999;
   color: white;
   background-color: darkorange;
 }
+.button3:hover {
+  opacity: 1;
+}
+.button3:active, .button3.selected {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
 
 .button4 {
+  box-shadow: 0 9px #999;
   color: black;
   background-color: gold;
 }
+.button4:hover {
+  opacity: 1;
+}
+.button4:active, .button4.selected {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
 
 .button5 {
+  box-shadow: 0 9px #999;
   color: white;
   background-color: forestgreen;
 }
+.button5:hover {
+  opacity: 1;
+}
+.button5:active, .button5.selected {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
 
 .button6 {
+  box-shadow: 0 9px #999;
   color: white;
   background-color: dodgerblue;
 }
+.button6:hover {
+  opacity: 1;
+}
+.button6:active, .button6.selected {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
 
 .button7 {
+  box-shadow: 0 9px #999;
   color: white;
   background-color: rebeccapurple;
+}
+.button7:hover {
+  opacity: 1;
+}
+.button7:active, .button7.selected {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.drum_options {
+  padding: 8px 16px;
+  margin: 5px;
+  color: white;
+  background-color: sienna;
 }
 
 table {
